frontend_tests/negative/excluded_generics/go.mod
module example.com/renvotests/negative/generics

go 1.25
